# C-Learn

./: readme.md
unit_10/src/: 10.1text.c++  10.2text.c++  10.3text.c++  10.4text.c++  text.txt
unit_11/src/: 11.1text  11.1text.c++  11.3text.c++
unit_12/include/: query_word.hpp
unit_12/src/: 12.1text.c++  12.2text.c++  12.3text.c++  query_word.c++
unit_13/include/: 13.1text.hpp  13.2text.hpp  13.5text.hpp  String.hpp  query_word.hpp  strvec.hpp
unit_13/src/: 13.1text.c++  13.2text.c++  13.5text.c++  String.c++  Stringtext.c++  main.c++  query_word.c++  query_word_text.c++  strvec.c++  zuozhi_youzhi_text.c++
unit_15/: text_1  text_1.cpp  text_15_22  text_15_22.cpp  text_1_plus.cpp  text_jicheng_using  text_jicheng_using.cpp
unit_15/query_test/: AndQuery.cpp  AndQuery.h  BinaryQuery.h  CMakeLists.txt  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.h  QueryResult.cpp  QueryResult.h  Query_base.h  TextQuery.cpp  TextQuery.h  WordQuery.h  main.cpp
unit_9/src/: changeSize.cpp  first.cpp  forward_list_text.cpp  myDate.cpp  remove_item_text.cpp  shipeiqi.cpp  shrink_to_fit_text.cpp  string_text.cpp  stringtoDate.cpp
